--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   cached_network_image: ^3.3.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
